kubemanifests.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yaml -o kubemanifests.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
    - name: "3010"
      port: 3010
      targetPort: 3010
  selector:
    io.kompose.service: api
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yaml -o kubemanifests.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yaml -o kubemanifests.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/zexe-arbitrum01-ts-default: "true"
        io.kompose.service: api
    spec:
      containers:
        - args:
            - npm
            - run
            - prod
          image: mubashirzebi/zexe-arbitrum:latest
          name: api
          ports:
            - containerPort: 3010
          resources: {}
      restartPolicy: Always
status: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: zexe-arbitrum01-ts-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/zexe-arbitrum01-ts-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/zexe-arbitrum01-ts-default: "true"
